--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/dashboard/employee/page.jsx", "src/app/employee/login/page.jsx", "src/app/page.jsx", "src/app/layout.jsx", "src/app/api/tasks/route.js"],
   "exclude": ["node_modules"]
 }
